_sass/_base.scss
/* ... */
ninja-keys::part(ninja-input) {
  color: var(--ninja-selected-text-color);
}

ninja-keys::part(ninja-input-wrapper) {
  background: var(--global-bg-color);
}

// newsletter
.newsletter-form-container {
  margin-bottom: 20px;
}

.newsletter-form {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
}

.newsletter-form-input,
.bibsearch-form-input {
  color: var(--global-newsletter-text-color);
  background: var(--global-newsletter-bg-color);
  border: 1px solid var(--global-newsletter-text-color);
  outline: none;
  margin: 0px 10px 0px 0px;
  width: 100%;
  max-width: 350px;
  min-width: 100px;
  box-sizing: border-box;
  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px;
  border-radius: 6px;
  padding: 8px 12px;
}

.newsletter-form-input:focus {
  border-color: var(--global-theme-color) !important;
}

.newsletter-form-button {
  background: var(--global-theme-color);
  color: var(--global-bg-color);
  display: flex;
  width: min-content;
  max-width: 200px;
  white-space: nowrap;
  height: 38px;
  align-items: center;
  flex-direction: row;
  padding: 9px 17px;
  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px;
  border-radius: 6px;
  text-align: center;
  font-style: normal;
  font-weight: 500;
  line-height: 20px;
  border: none;
  cursor: pointer;
}

.newsletter-loading-button {
  background: var(--global-theme-color);
  color: var(--global-bg-color);
  display: none;
  width: min-content;
  max-width: 300px;
  white-space: nowrap;
  height: 38px;
  align-items: center;
  flex-direction: row;
  padding: 9px 17px;
  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px;
  border-radius: 6px;
  text-align: center;
  font-style: normal;
  font-weight: 500;
  line-height: 20px;
  border: none;
  cursor: pointer;
  margin-right: 20px;
}

.newsletter-success {
  color: var(--global-text-color);
  display: none;
  align-items: center;
  width: 100%;
}

.newsletter-error {
  color: var(--global-theme-color);
  display: none;
  align-items: center;
  width: 100%;
}

.newsletter-back-button {
  color: var(--global-theme-color);
  margin: 10px auto;
  text-align: center;
  display: none;
  background: transparent;
  border: none;
  cursor: pointer;
}

@media (max-width: 575px) {
  .newsletter-form-input,
  .newsletter-form-button,
  .newsletter-loading-button,
  .newsletter-success,
  .newsletter-error {
    font-size: 16px !important;
  }
  .newsletter-form-container {
    margin-right: 20px;
    margin-left: 20px;
  }
}

// popover is used for annotation in bib.liquid
.popover {
  background-color: var(--global-bg-color);
  border-color: var(--global-divider-color);

  .popover-header {
    color: var(--global-text-color); // Header text color
    border-bottom: 1px solid var(--global-divider-color);
  }

  .popover-body {
    color: var(--global-text-color); // Body text color
  }
}

.bs-popover-top {
  // arrow fill color
  .arrow::after {
    border-top-color: var(--global-bg-color);
  }

  // arrow border color
  .arrow:before {
    border-top-color: var(--global-divider-color);
  }
}

.bs-popover-bottom {
  // arrow fill color
  .arrow::after {
    border-bottom-color: var(--global-bg-color);
  }

  // arrow border color
  .arrow:before {
    border-bottom-color: var(--global-divider-color);
  }
}

// highlight-search-term
::highlight(search) {
  background-color: var(--global-theme-color);
  color: var(--global-text-color);
}

figure.cover {
  display: inline-block;
  text-align: center;
  margin: 0.5rem; /* adjust as needed */

  img {
    vertical-align: bottom;
  }

  figcaption.abandoned {
    font-family: monospace;
    color: #23212d;
    text-transform: uppercase;
    background-color: #ee5f5b;
  }

  figcaption.finished,
  figcaption.watched {
    font-family: monospace;
    color: #23212d;
    text-transform: uppercase;
    background-color: #62c462;
  }

  figcaption.interested {
    font-family: monospace;
    color: #23212d;
    text-transform: uppercase;
    background-color: #7691db;
  }

  figcaption.paused {
    font-family: monospace;
    color: #23212d;
    text-transform: uppercase;
    background-color: #bdac7e;
  }

  figcaption.queued {
    font-family: monospace;
    color: #23212d;
    text-transform: uppercase;
    background-color: #9e76b5;
  }

  figcaption.reading,
  figcaption.watching {
    font-family: monospace;
    color: #23212d;
    text-transform: uppercase;
    background-color: #f89406;
  }

  figcaption.reread,
  figcaption.rewatch {
    font-family: monospace;
    color: #23212d;
    text-transform: uppercase;
    background-color: #a6517d;
  }

  figcaption.uncategorized {
    font-family: monospace;
    color: #23212d;
    text-transform: uppercase;
    background-color: #b0abb3;
  }

  /* mouse over link */
  a.cover-link:hover {
    color: #23212d !important;
  }
}

/************************************************************************
Custom CSS
*************************************************************************/

body {
  background-image: url("../../assets/img/svg/curvas_blanco.svg"),
    linear-gradient(to right, var(--gisteiz-main-color-light-rgba-40), var(--gisteiz-main-color-light-rgba-20) 80%);
    /*linear-gradient(to right, #001e57eb, #001e57 80%);*/
  /*background-size: 100% 100%;*/ /* optional */
  background-position:
    right top,
    center center;
  background-repeat: no-repeat, repeat;
  /*background-size: 675px 600px, cover;*/
  font-family: "Nunito Sans", "Montserrat Regular", "RobotoVariable", sans-serif;
  /*font-weight: 600 !important;*/
}

.font-protest {
  font-family: "ProtestStrike";
}

.font-protest-spaced {
  font-family: "ProtestStrike";
  letter-spacing: 0.05rem;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "ProtestStrike";
}

.navbar {
  /*background-image: linear-gradient(to top, white, var(--gisteiz-main-color-rgba-20) 90%, var(--gisteiz-main-color-rgba-80) 90%);*/
  border-top: var(--gisteiz-main-color-rgba-80) solid 0.4rem;
}

.navbar-brand {
  padding-top: 0px;
  padding-bottom: 0px;
}
/* ... */

